# PlainLicenses

./: .eslintcache  .gitignore  .gitmodules  .linthtmlrc.yaml  .markdownlint.yml  .pre-commit-config.yaml  .quokka  .releaserc.json  .shellcheckrc  .sourcery.yaml  LICENSE_TEMPLATE.md  README.md  UNLICENSE  _typos.toml  bun.lockb  commit_types  commitlint.config.js  commitlint.config.ts  differing-files.txt  embed_mkdocs_config.yml  eslint.config.mjs  lerna.json  mkdocs.yml  package-lock.json  package.json  pyproject.toml  pyvenv.cfg  ruff.toml  tsconfig.build.json  tsconfig.build.tsbuildinfo  tsconfig.commitlint.json  tsconfig.json
.devcontainer/: .bashrc  .p10k.zsh  .zshrc  Dockerfile  container-setup.sh  devcontainer.json  lolcate_config.toml  lolcate_ignores
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: legal_issue.yml
.github/scripts/: update_sponsors.py
.github/src/: generate-changelog.ts  index.ts
.github/workflows/: build.yml  ci.yml  combine-prs.yml  deploy.yml  fundingupdate.yml  notify.yml  pull-requests.yml  release-build-deploy.yml  release.yml
docs/: cache_meta.3OJKREVG.json  cache_meta.B2F62NAH.json  cache_worker.OXCBKYTX.js  cache_worker.OXCBKYTX.js.map  index.md  meta.json  tags.md
docs/about/: index.md
docs/assets/javascripts/: index.37RCS3O7.js  index.37RCS3O7.js.map  index.3QUY3LCM.js  index.3QUY3LCM.js.map  index.4RGSAMCY.js  index.4RGSAMCY.js.map  index.4YPKFWJJ.js  index.4YPKFWJJ.js.map  index.56E5W6X6.js  index.56E5W6X6.js.map  index.5F445YJ6.js  index.5F445YJ6.js.map  index.63MQSL2I.js  index.63MQSL2I.js.map  index.6INGU5MO.js  index.6INGU5MO.js.map  index.7P62UP3N.css  index.7P62UP3N.css.map  index.A43OQV5A.js  index.A43OQV5A.js.map  index.AAMACZYP.js  index.AAMACZYP.js.map  index.AD7BRH54.js  index.AD7BRH54.js.map  index.EQTK7PTU.js  index.EQTK7PTU.js.map  index.GIDUNGYS.js  index.GIDUNGYS.js.map  index.IZ6IJEDC.js  index.IZ6IJEDC.js.map  index.J4AG7E6F.css  index.JERBPY3Z.js  index.JERBPY3Z.js.map  index.JF72V3BX.js  index.JF72V3BX.js.map  index.LSL54Q72.js  index.LSL54Q72.js.map  index.LWGSG5UI.js  index.LWGSG5UI.js.map  index.M4RH6NJH.js  (+29 more)
docs/assets/stylesheets/: bundle.2M3PLKDM.css  bundle.2M3PLKDM.css.map  bundle.63D6A3RY.css  bundle.63D6A3RY.css.map  bundle.7BN2WIX4.css  bundle.7BN2WIX4.css.map  bundle.7F3MGL7G.css  bundle.7F3MGL7G.css.map  bundle.AAEDZNAJ.css  bundle.AAEDZNAJ.css.map  bundle.AFVVY3GO.css  bundle.AFVVY3GO.css.map  bundle.AKDUGKTI.css  bundle.AKDUGKTI.css.map  bundle.BWTUIAMY.css  bundle.BWTUIAMY.css.map  (+42 more)
docs/faq/: index.md
docs/helping/: code.md  commit.md  craft.md  index.md  legal.md  translate.md  write.md
docs/licenses/: index.md
overrides/: buildmeta.json  embedded_license.html  home.html  license.html  main.html
overrides/hooks/: _models.py  _utils.py  env_settings.py  hook_logger.py  license_assembly.py  license_canary.py  license_factory.py  shame_counter.py  socialmedia.py  update_changelogs.py  update_site_license.py
overrides/partials/: copyright.html  header.html  hero_tabs.html  heroheader.html  herolanding.html  license_disclaimer_block.html  license_tablabels.html  license_tags.html  license_toc.html  logo.html
src/: cache_meta.json  cache_worker.ts
typings/: commit.d.ts
(+149 files in other folders)
