[project]
name = "plainlicense"
version = "0.1.0"
description = "The python component of Plain License provides scripts and utilities for managing and generating plain language licenses and plainlicense.org."
authors = [{ name = "Adam Poulemanos", email = "adam@plainlicense.org" }]
dependencies = [
    "PyGithub>=2.4.0",
    "funcy>=2.0",
    "markdown>=3.7",
    "markupsafe>=2.1.5",
    "mkdocs-git-authors-plugin>=0.9.1",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-markdown-filter>=0.1.1",
    "mkdocs-material[imaging]>=9.5.42",
    "mkdocs-rss-plugin>=1.16.0",
    "mkdocs-static-i18n[material]>=1.2.3",
    "mkdocs[i18n]>=1.6.0",
    "pygments>=2.18.0",
    "pymdown-extensions>=10.9",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-minify-plugin>=0.8.0",
    "pyyaml_env_tag>=0.1.0",
    "ez-yaml>=2.2.0",
    "pydantic>=2.9.2",
]
readme = "README.md"
requires-python = ">= 3.12.7"
license = { text = "UNLICENSE" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/plainlicense"]

[tool.uv]
dev-dependencies = [
    "glom>=23.5.0",
    "ipython>=8.29.0",
    "pyperclip>=1.9.0",
    "rich>=13.9.3",
    "tqdm>=4.66.5",
]
python-downloads = "automatic"
managed = true
cache-dir = ".cache/uv"
cache-keys = [{ file = "pyproject.toml" }]
compile-bytecode = true
python-preference = "managed"

[tool.uv.pip]
all-extras = true
compile-bytecode = true
